--- a/FiscalManagement/Pages/Contribuabili/Create.cshtml
+++ b/FiscalManagement/Pages/Contribuabili/Create.cshtml
@@ -37,9 +37,15 @@
                 <span asp-validation-for="Contribuabil.Telefon" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Contribuabil.NumeUtilizator" class="control-label"></label>
+                <input asp-for="Contribuabil.NumeUtilizator" class="form-control" />
+                <span asp-validation-for="Contribuabil.NumeUtilizator" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
+
     </div>
 </div>
 
