--- a/FiscalManagement/Pages/Plati/Create.cshtml
+++ b/FiscalManagement/Pages/Plati/Create.cshtml
@@ -1,45 +1,41 @@
 ﻿@page
 @model FiscalManagement.Pages.Plati.CreateModel
-
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Adaugă o plată";
 }
 
-<h1>Create</h1>
+<h1>Adaugă o plată</h1>
 
-<h4>Plata</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <span class="text-danger">*</span>
-                <label asp-for="Plata.Suma" class="control-label"></label>
-                <input asp-for="Plata.Suma" class="form-control" />
-                <span asp-validation-for="Plata.Suma" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <span class="text-danger">*</span>
-                <label asp-for="Plata.DataPlatii" class="control-label"></label>
-                <input asp-for="Plata.DataPlatii" class="form-control" />
-                <span asp-validation-for="Plata.DataPlatii" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Plata.ContribuabilID" class="control-label"></label>
-                <select asp-for="Plata.ContribuabilID" class ="form-control" asp-items="ViewBag.ContribuabilID"></select>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
+<form method="post" enctype="multipart/form-data">
+    <div class="form-group">
+        <label asp-for="Plata.DetaliiPlata" class="control-label"></label>
+        <input asp-for="Plata.DetaliiPlata" class="form-control" />
+        <span asp-validation-for="Plata.DetaliiPlata" class="text-danger"></span>
     </div>
-</div>
-
-<div>
-    <a asp-page="Index">Back to List</a>
-</div>
-
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+    <div class="form-group">
+        <label asp-for="Plata.DataPlata" class="control-label"></label>
+        <input asp-for="Plata.DataPlata" type="date" class="form-control" />
+        <span asp-validation-for="Plata.DataPlata" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="Plata.Suma" class="control-label"></label>
+        <input asp-for="Plata.Suma" class="form-control" />
+        <span asp-validation-for="Plata.Suma" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="Plata.TipPlata" class="control-label"></label>
+        <input asp-for="Plata.TipPlata" class="form-control" />
+        <span asp-validation-for="Plata.TipPlata" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="Plata.FisierUpload" class="control-label"></label>
+        <input asp-for="Plata.FisierUpload" type="file" class="form-control" />
+        <span asp-validation-for="Plata.FisierUpload" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="Plata.ContribuabilID" class="control-label"></label>
+        <select asp-for="Plata.ContribuabilID" class="form-control" asp-items="@(ViewData["Contribuabili"] as SelectList)"></select>
+        <span asp-validation-for="Plata.ContribuabilID" class="text-danger"></span>
+    </div>
+    <button type="submit" class="btn btn-primary">Adaugă</button>
+</form>
