--- a/FiscalManagement/Pages/Plati/Delete.cshtml
+++ b/FiscalManagement/Pages/Plati/Delete.cshtml
@@ -1,40 +1,23 @@
-﻿@page
+﻿@page "{id:int}"
 @model FiscalManagement.Pages.Plati.DeleteModel
-
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Șterge plată";
 }
 
-<h1>Delete</h1>
+<h1>Șterge plată</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Sigur doriți să ștergeți această plată?</h3>
 <div>
-    <h4>Plata</h4>
-    <hr />
+    <h4>Plată</h4>
     <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Plata.Suma)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Plata.Suma)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Plata.DataPlatii)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Plata.DataPlatii)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Plata.Contribuabil)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Plata.Contribuabil.CNP)
-        </dd>
+        <dt class="col-sm-2">Detalii</dt>
+        <dd class="col-sm-10">@Model.Plata.DetaliiPlata</dd>
+        <dt class="col-sm-2">Suma</dt>
+        <dd class="col-sm-10">@Model.Plata.Suma</dd>
     </dl>
-    
-    <form method="post">
-        <input type="hidden" asp-for="Plata.PlataID" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="./Index">Back to List</a>
-    </form>
 </div>
+<form method="post">
+    <input type="hidden" asp-for="Plata.PlataID" />
+    <button type="submit" class="btn btn-danger">Șterge</button>
+    <a class="btn btn-secondary" asp-page="Index">Renunță</a>
+</form>
