--- a/FiscalManagement/Pages/Plati/Details.cshtml
+++ b/FiscalManagement/Pages/Plati/Details.cshtml
@@ -1,37 +1,32 @@
-﻿@page
+﻿@page "{id:int}"
 @model FiscalManagement.Pages.Plati.DetailsModel
-
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalii plată";
 }
 
-<h1>Details</h1>
+<h1>Detalii plată</h1>
 
 <div>
-    <h4>Plata</h4>
+    <h4>Plată</h4>
     <hr />
     <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Plata.Suma)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Plata.Suma)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Plata.DataPlatii)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Plata.DataPlatii)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Plata.Contribuabil)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Plata.Contribuabil.CNP)
-        </dd>
+        <dt class="col-sm-2">Detalii</dt>
+        <dd class="col-sm-10">@Model.Plata.DetaliiPlata</dd>
+
+        <dt class="col-sm-2">Data Plății</dt>
+        <dd class="col-sm-10">@Model.Plata.DataPlata.ToShortDateString()</dd>
+
+        <dt class="col-sm-2">Suma</dt>
+        <dd class="col-sm-10">@Model.Plata.Suma</dd>
+
+        <dt class="col-sm-2">Tip Plată</dt>
+        <dd class="col-sm-10">@Model.Plata.TipPlata</dd>
+
+        <dt class="col-sm-2">Contribuabil</dt>
+        <dd class="col-sm-10">@Model.Plata.Contribuabil.Nume</dd>
     </dl>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.Plata.PlataID">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
+    <a class="btn btn-primary" asp-page="Edit" asp-route-id="@Model.Plata.PlataID">Editează</a>
+    <a class="btn btn-secondary" asp-page="Index">Înapoi la listă</a>
 </div>
