--- a/FiscalManagement/Pages/Plati/Edit.cshtml
+++ b/FiscalManagement/Pages/Plati/Edit.cshtml
@@ -1,47 +1,42 @@
-﻿@page
+﻿@page "{id:int}"
 @model FiscalManagement.Pages.Plati.EditModel
-
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editează plată";
 }
 
-<h1>Edit</h1>
+<h1>Editează plată</h1>
 
-<h4>Plata</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Plata.PlataID" />
-            <div class="form-group">
-                <span class="text-danger">*</span>
-                <label asp-for="Plata.Suma" class="control-label"></label>
-                <input asp-for="Plata.Suma" class="form-control" />
-                <span asp-validation-for="Plata.Suma" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <span class="text-danger">*</span>
-                <label asp-for="Plata.DataPlatii" class="control-label"></label>
-                <input asp-for="Plata.DataPlatii" class="form-control" />
-                <span asp-validation-for="Plata.DataPlatii" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Plata.ContribuabilID" class="control-label"></label>
-                <select asp-for="Plata.ContribuabilID" class="form-control" asp-items="ViewBag.ContribuabilID"></select>
-                <span asp-validation-for="Plata.ContribuabilID" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
+<form method="post" enctype="multipart/form-data">
+    <input type="hidden" asp-for="Plata.PlataID" />
+    <div class="form-group">
+        <label for="DetaliiPlata">Detalii</label>
+        <input asp-for="Plata.DetaliiPlata" class="form-control" />
+        <span asp-validation-for="Plata.DetaliiPlata" class="text-danger"></span>
     </div>
-</div>
-
-<div>
-    <a asp-page="./Index">Back to List</a>
-</div>
-
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+    <div class="form-group">
+        <label for="DataPlata">Data Plății</label>
+        <input asp-for="Plata.DataPlata" type="date" class="form-control" />
+        <span asp-validation-for="Plata.DataPlata" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label for="Suma">Suma</label>
+        <input asp-for="Plata.Suma" class="form-control" />
+        <span asp-validation-for="Plata.Suma" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label for="TipPlata">Tipul Plății</label>
+        <input asp-for="Plata.TipPlata" class="form-control" />
+        <span asp-validation-for="Plata.TipPlata" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label for="Fisier">Fișier</label>
+        <input asp-for="Plata.Fisier" type="file" class="form-control" />
+        <span asp-validation-for="Plata.Fisier" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label for="ContribuabilID">Contribuabil</label>
+        <select asp-for="Plata.ContribuabilID" class="form-control" asp-items="@(ViewData["Contribuabili"] as SelectList)"></select>
+        <span asp-validation-for="Plata.ContribuabilID" class="text-danger"></span>
+    </div>
+    <button type="submit" class="btn btn-primary">Salvează</button>
+</form>
