--- a/FiscalManagement/Pages/Shared/_Layout.cshtml
+++ b/FiscalManagement/Pages/Shared/_Layout.cshtml
@@ -19,9 +19,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav me-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-page="/Index">Home</a>
-                        </li>
+                    
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-page="/Contribuabili/Index">Contribuabili</a>
                         </li>
@@ -29,7 +27,7 @@
                             <a class="nav-link" asp-area="" asp-page="/Cereri/Index">Cereri</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-page="/Plati/Index">Plăți</a>
+                            <a class="nav-link" asp-area="" asp-page="/Tasks/Index">Sarcini</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-page="/Audite/Index">Audite</a>
