--- a/FiscalManagement/Pages/Tasks/Delete.cshtml
+++ b/FiscalManagement/Pages/Tasks/Delete.cshtml
@@ -2,20 +2,67 @@
 @model FiscalManagement.Pages.Tasks.DeleteModel
 
 @{
-    ViewData["Title"] = "Șterge Task";
+    ViewData["Title"] = "Șterge Sarcină";
 }
 
-<h2>@ViewData["Title"]</h2>
+<h2 class="text-danger">@ViewData["Title"]</h2>
 
 <div>
-    <h4>Șterge task</h4>
+    <h4>Detalii</h4>
+    <hr />
     <dl class="row">
-        <dt class="col-sm-2">Titlu</dt>
-        <dd class="col-sm-10">@Model.Task.Titlu</dd>
+        <dt class="col-sm-2">
+            Titlu
+        </dt>
+        <dd class="col-sm-10">
+            @Model.Task.Titlu
+        </dd>
+        <dt class="col-sm-2">
+            Descriere
+        </dt>
+        <dd class="col-sm-10">
+            @Model.Task.Descriere
+        </dd>
+        <dt class="col-sm-2">
+            Status
+        </dt>
+        <dd class="col-sm-10">
+            @Model.Task.Status
+        </dd>
+        <dt class="col-sm-2">
+            Data Creare
+        </dt>
+        <dd class="col-sm-10">
+            @Model.Task.DataCreare.ToString("dd.MM.yyyy")
+        </dd>
+        <dt class="col-sm-2">
+            Data Limită
+        </dt>
+        <dd class="col-sm-10">
+            @Model.Task.DataLimita?.ToString("dd.MM.yyyy")
+        </dd>
+        <dt class="col-sm-2">
+            Alocat La
+        </dt>
+        <dd class="col-sm-10">
+            @Model.Task.AlocatLa
+        </dd>
+        <dt class="col-sm-2">
+            Prioritate
+        </dt>
+        <dd class="col-sm-10">
+            @Model.Task.Prioritate
+        </dd>
+        <dt class="col-sm-2">
+            Creat De
+        </dt>
+        <dd class="col-sm-10">
+            @Model.Task.CreatDe
+        </dd>
     </dl>
 
     <form method="post">
-        <button type="submit" class="btn btn-danger">Șterge</button>
-        <a asp-page="Index" class="btn btn-secondary">Înapoi</a>
+        <button type="submit" class="btn btn-danger">Confirmă Ștergerea</button>
+        <a asp-page="Index" class="btn btn-secondary">Anulează</a>
     </form>
 </div>
